# penn-courses

./: .buildpacks  .dockerignore  .gitignore  CNAME  Dockerfile  LICENSE  Pipfile  Procfile  README.md  admin.py  alert_views_old.py  app.json  codecov.yml  fly.toml  index.html  links.txt  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  urls.py  views.py
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Pipfile  README.md  asgi.py  course_similarity.ipynb  db.sqlite3-journal  docker-compose-local.yaml  docker-compose.yaml  experiment.py  load_openapi.sh  manage.py  patchyaml.py  populate_pgvector.py  pyproject.toml  redis-stack.conf  setup.cfg  status_audit.txt  test_rag_interactive.py  xwalk_crse_number.txt
backend/PennCourses/: __init__.py  asgi.py  celery.py  command_utils.py  docs_settings.py  jwks.py  middleware.py  urls.py  wsgi.py
backend/PennCourses/authentication/: jwt.py
backend/PennCourses/settings/: base.py  ci.py  development.py  production.py
backend/PennCourses/templates/: redoc.html  topic_courses_admin.html
backend/PennCourses/urls/: api.py
backend/accounts/: admin.py  apps.py  authentication.py  backends.py  ipc.py  models.py  settings.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  rename_groups.py
backend/alert/: admin.py  alerts.py  apps.py  examples.py  models.py  serializers.py  tasks.py  tests.py  urls.py  util.py  views.py
backend/alert/migrations/: 0001_initial.py  0002_delete_registration.py  0003_courseupdate_registration.py  0004_auto_20190926_0549.py  0005_delete_courseupdate.py  0006_auto_20191110_1357.py  0007_auto_20200131_1619.py  0008_registration_original_created_at.py  0009_auto_20200418_2117.py  0009_auto_20200419_2112.py  0010_auto_20200419_1758.py  0010_auto_20200817_0017.py  0010_auto_20201001_0445.py  0010_auto_20201002_0714.py  0011_auto_20201002_0327.py  0011_auto_20201018_1401.py  0011_auto_20201101_1855.py  0011_auto_20201108_1535.py  0012_auto_20210103_0054.py  0012_auto_20210319_0228.py  0012_auto_20210320_1715.py  0012_auto_20210325_1503.py  0012_auto_20210328_2204.py  0012_auto_20210418_0343.py  0012_merge_20201231_1020.py  0013_auto_20210304_1259.py  0013_auto_20210320_1414.py  0013_auto_20210328_2326.py  0014_auto_20210304_1300.py  (+10 more)
backend/courses/: admin.py  apps.py  course_text_heuristics.py  examples.py  filters.py  materialized_views.py  models.py  registrar.py  search.py  semantic_search.py  serializers.py  tasks.py  tests.py  urls.py  util.py  views.py
backend/degree/: README.md  admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  util.py  views.py
backend/health/: urls.py  views.py
backend/identity/: apps.py  identity.py  permissions.py
backend/openapi/: patch_plan.yaml
backend/plan/: admin.py  apps.py  examples.py  filters.py  models.py  search.py  serializers.py  tests.py  urls.py  util.py  views.py
backend/redis/: dump.rdb
backend/review/: _optimized_queries.py  _views.py  admin.py  annotations.py  apps.py  chat_postgres_migrate.py  documentation.py  models.py  serializers.py  tests.py  urls.py  util.py  views.py
backend/scripts/: asgi-run
backend/tests/: __init__.py
(+1492 files in other folders)
