[tool.poetry]
name = "penn-courses"
version = "0.1.0"
description = "Powering Penn Course Review, Penn Course Plan, Penn Course Alert, and Penn Degree Plan"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
requests = "^2.31.0"
twilio = "^8.11.0"
phonenumbers = "^8.13.27"
python-dateutil = "^2.8.2"
djangorestframework = "^3.14.0"
numpy = "^1.26.3"
redis = "^3.4.1"
SciPy = "^1.11.4"
celery = "<5"
django-runtime-options = "^0.1.3"
django-auto-prefetching = "^0.2.12"
tqdm = "^4.66.1"
lark-parser = "^0.12.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
boto3 = "^1.34.18"
jsonref = "^1.1.0"
dj-database-url = "^2.1.0"
sentry-sdk = "^1.39.2"
arrow = "^1.3.0"
django-labs-accounts = "^0.9.4"
ics = "^0.7.2"
scikit-learn = "^1.3.2"
ddt = "^1.7.1"
django-extensions = "^3.2.3"
drf-nested-routers = "^0.93.5"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
unittest-xml-reporting = "^3.2.0"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
isort = "^5.13.2"
flake8-quotes = "^3.3.2"
pytest-django = "^4.7.0"
django-debug-toolbar = "^4.2.0"
black = "22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
